# sofabi

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: error.rs  main.rs
contract/: Cargo.toml
contract/src/: lib.rs
derive/: Cargo.toml
derive/src/: constructor.rs  contract.rs  event.rs  function.rs  lib.rs
snap/: snapcraft.yaml
sofabi/: Cargo.toml
sofabi/src/: lib.rs  log.rs  operation.rs
sofabi/src/token/: token.rs
tests/: Cargo.toml
tests/src/: lib.rs
